examples/griff/error/ErrorKind.grf
module ErrorKind = {
  id = {x -> x};
  main = { id 42# };
}